src/index.css
/* Navbar */
#navbar {
	padding: 1em 2em;
	position: fixed;
	z-index: 2;
}
#navbar .link {
	cursor: pointer;
	color: #fff;
}
#navbar .active {
	color: #bbb;
}
#navbar .link:hover{
	color: #bbb;
}
/* Current Weather */
.current {
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
}
.current-data {
	margin-right: 5em;
}
.mars-bg {
	background-image: url('./img/Mars-bg.jpg');
	background-repeat: no-repeat;
	background-size: cover;
}

